--- a/META-INF/index.html
+++ b/META-INF/index.html
@@ -6,5 +6,19 @@
 </head>
 <body>
 
+    <div id="head">
+        <h2> Howdy Ho!</h2>
+
+    </div>
+    <div id="body"
+
+    </div>
+    <div id="foot">
+        breadcrumb text here
+        <a href="#">link 1</a>
+        <a href="#">link 2</a>
+        <a href="#">link 3</a>
+        <a href="#">link 4</a>
+    </div>
 </body>
 </html>
