--- a/META-INF/index.html
+++ b/META-INF/index.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>FancyPants</title>
+    <title>IntelliJ WEB Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -10,9 +11,11 @@
         <h2> Howdy Ho!</h2>
 
     </div>
-    <div id="body"
+
+    <div id="body">
 
     </div>
+
     <div id="foot">
         breadcrumb text here
         <a href="#">link 1</a>
